Created context and public

--- a/API.InOutClock.API/appsettings.json
+++ b/API.InOutClock.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "APIInOutClockContext": "Data Source=DESKTOP-2TQ5VIT\\SQLEXPRESS;Initial Catalog=API_InOutClock_DB;User ID=sa;Password=RCorral20;"
+    
+  }
 }
