--- a/API.InOutClock.API/API.InOutClock.API.csproj
+++ b/API.InOutClock.API/API.InOutClock.API.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\API.InOutClock.Data\API.InOutClock.Data.csproj" />
+    <ProjectReference Include="..\API.InOutClock.Shared\API.InOutClock.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
