--- a/API.InOutClock.Data/API.InOutClock.Data.csproj
+++ b/API.InOutClock.Data/API.InOutClock.Data.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\API.InOutClock.Shared\API.InOutClock.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
