--- a/API.InOutClock.API/appsettings.json
+++ b/API.InOutClock.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "APIInOutClockContext": "Data Source=DESKTOP-2TQ5VIT\\SQLEXPRESS;Initial Catalog=API_InOutClock_DB;User ID=sa;Password=RCorral20;"
-    
+    "APIInOutClockContext": "Data Source=DESKTOP-2TQ5VIT\\SQLEXPRESS;Initial Catalog=API_InOutClock_DB;User ID=sa;Password=RCorral20; TrustServerCertificate=true;"
+
   }
 }
