--- a/API.InOutClock.API/appsettings.json
+++ b/API.InOutClock.API/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "APIInOutClockContext": ""//Set In Secrets
+    "APIInOutClockContext": "" //Set In Secrets
   },
-  "Jwt": {
-    "Key": "", //Set In Secrets
+  "JwtConfig": {
+    "Secret": "", //Set In Secrets
     "Issuer": "", //Set In Secrets
     "Audience": "" //Set In Secrets
   }
